--- a/symfony2-sunat/composer.json
+++ b/symfony2-sunat/composer.json
@@ -19,7 +19,9 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "knplabs/knp-paginator-bundle": "dev-master"
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "phpunit/phpunit": "3.7.*",
+        "phpunit/dbunit": ">=1.2"
     },
     "scripts": {
         "post-install-cmd": [
